---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ????
  Features:
    - Added keyboard shortcut to get the edit tool directly (disabled by default)
  Changes:
    - Refactored the mod structure to improve performace and simplicity
    - Switched from RaiLuaLib to FLib
    - Switched to double quotes everywhere
  Bugfixes:
    - Fixed that a player's tilegrids and data would remain behind if they were removed
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2020-04-07
  Changes:
    - Removed lualib and made it a separate mod, RaiLuaLib
    - Updated changelog formatting
  Bugfixes:
    - Fixed a crash when setting the textfield on the draw GUI to an invalid value right after opening the GUI
    - Fixed that if the mod was removed, any existing highlight boxes or tutorial bubbles would remain behind, staying forever
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020-01-29
  Changes:
    - Unlocked the adjust button in multiplayer, as the base game bug caused by using it has been fixed
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020-01-29
  Changes:
    - Moved most of the migrations to on_configuration_changed
    - Moved util file out of the lualib folder
    - Updated thumbnail
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020-01-24
  Changes:
    - Added a prefix to all of the settings prototypes to avoid conflicts with other mods
  Bugfixes:
    - Fixed a crash when literally any other mod was loaded
    - Fixed a crash when perishing multiple tapelines at once
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-01-23